from private to public

--- a/style.css
+++ b/style.css
@@ -80,13 +80,18 @@ input[type=button] {
     box-shadow: 0 1px 1px rgba(0,0,0,0.3);
     justify-content: center;
     padding: 10px;
+    margin-top: 15px;
     font-size: 22px;
 }
 
 .fieldgroup {
   display: flex;
-  flex-wrap: nowrap;
-  display: grid;
+  flex-direction: column;
+  padding: 0px 20px 20px 20px;
+  border: 1px solid grey;
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+
   /*justify-content: flex-start;*/
   /*align-items: center;*/
 }
